I added ingredients for the cream

--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -3,7 +3,9 @@
   author: Marta
 ---
 
-Ingredients:
+## Ingredients:
+
+**Dough:**
 
 -   carrots (medium size) - 2
 
@@ -24,3 +26,13 @@ Ingredients:
 -   pecan nuts - 200 grams
 
 -   salt - just a pinch for the magic ;)
+
+**Cream:**
+
+-   cream cheese (the fluffy type like Almette )
+
+-   powdered sugar - the original recipe said 120 grams, but it's way to much, I add 50 grams
+
+-   butter - 50 g
+
+-   orange juice - squeezed from a 0.25 of orange
