format index.qmd in a way that RStudio will not alter anymore

--- a/index.qmd
+++ b/index.qmd
@@ -7,13 +7,12 @@ toc: false
 
 The 2024 n2g class wants to share some of their best recipes.
 
-
-::: {.callout-note}
+::: callout-note
 The recipes may or may not have been tries out by the authors, and may or may not:
 
-- actually have been written by ChatGPT
-- copy-pasted from somewhere
-- just completely made up with ingredients that are not designed for human consumption
+-   actually have been written by ChatGPT
+-   copy-pasted from somewhere
+-   just completely made up with ingredients that are not designed for human consumption
 
 Basically, use at your own risk.
 :::
