correcting quickly some mistakes

--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -3,7 +3,7 @@
   author: Maureen
 ---
 
-If you want to be real french person - yes, yes you want it - then you must know how to make a good "gratin". And here, you are not going to learn how to make *any* gratin, you are going to make the incredible, the magical, the one and only: **Gratin dauphinois** or "pommes de terre à la dauphinoise" if you will.
+If you want to be a real french person - yes, yes you want it - then you must know how to make a good "gratin". And here, you are not going to learn how to make *any* gratin, you are going to make the incredible, the one and only: **Gratin dauphinois** or "pommes de terre à la dauphinoise" if you will.
 
 Ingredients:
 
