--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -3,6 +3,8 @@
   author: Marta
 ---
 
+![Wild carrot from a botany textbook according to ChatGPT](images/carrot.webp){fig-align="center" width="500"}
+
 ## Ingredients:
 
 ::: {.callout-important appearance="minimal"}
