slight alterations to the ingredients

--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -39,8 +39,8 @@ Know your roots, people!
 
 -   cream cheese (the fluffy type like Almette )
 
--   powdered sugar - the original recipe said 120 grams, but it's way to much, I add 50 grams
+-   powdered sugar - the original recipe said 120 grams, but it's way to much, I add 20 grams
 
 -   butter - 50 g
 
--   orange juice - squeezed from a 0.25 of orange
+-   orange juice - squeezed from a 0.25 of orange - or more, if you want it to be less solid/ more orangy
