--- a/index.qmd
+++ b/index.qmd
@@ -8,13 +8,13 @@ toc: false
 The 2024 n2g class wants to share some of their best recipes.
 
 ::: callout-note
-The recipes may or may not have been tries out by the authors, and may or may not:
+The recipes may or may not have been tried out by the authors, and may or may not have been:
 
--   actually have been written by ChatGPT
+-   actually written by ChatGPT
 -   copy-pasted from somewhere
 -   just completely made up with ingredients that are not designed for human consumption
 
-Basically, use at your own risk.
+Basically, use at your own risks.
 :::
 
 See the recipes tab above.
