grammar and spelling mistakes

--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -18,7 +18,7 @@ Back to our main subject; How do you make it?
 ### Ingredients
 
 ::: {.callout-note appearance="minimal"}
-The fun part in this recipe? It's totally up to you. Take as many potatoes as your in the mood for, poor in enough liquid cream and milk (a 60-40 ratio should de the trick) to cover them up and *voilà*--deliciousness awaits. Cooking rules, am I right?
+The fun part in this recipe? It's totally up to you. Take as many potatoes as you're in the mood for, poor in enough liquid cream and milk (a 60-40 ratio should do the trick) to cover them up and *voilà*--deliciousness awaits. Cooking rules, am I right?
 
 Don't worry, though, I'm not going to pull a classic 'grandma move' and tell you to 'just feel it' when you ask how much of something to use. I'll give you some guidelines to get you started, but the real magic happens when you start trusting your instincts (and maybe even start eyeballing everything ---god, turns out those old floks are onto something).
 :::
@@ -30,9 +30,9 @@ Don't worry, though, I'm not going to pull a classic 'grandma move' and tell you
 
 ### Materials
 
-You need a mandolin, not the instrument (unless you want some entertainment), but the cooking tool. Or it could be anything that helps you cut very thin slices of potatoes. Could be a knife even, if you are patient enough (been there, done that, and I thought it would be my last day on earth).
+You need a mandolin, not the instrument (unless you want some entertainment), but the cooking tool. Or it could be anything that helps you cut very thin slices of potatoes. Could be a knife, even, if you are patient enough (been there, done that, and I thought it would be my last day on earth).
 
-And you also need an oven.
+Also, you need an oven.
 
 ### Instruction
 
