--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -5,7 +5,7 @@
 
 ![Wild carrot from a botany textbook according to ChatGPT](images/carrot.webp){fig-align="center" width="500"}
 
-### Ingredients:
+### Ingredients
 
 ::: {.callout-important appearance="minimal"}
 The part of the carrot that we will be using here (the red-orange part) is a root of Wild carrot *Daucus carota*. However, whether something is a root or not is famously causing confusion among non-biologist type of folks. For example, if you type 'root' on your phone, Gboard will propose an emoji of ginger root. And that is not a root, not at all. It's a rhizome, which is actually a stem!
@@ -70,3 +70,9 @@ Know your roots, people!
 3.  Put the cream on top on your baked cake, after it cools down
 
 *SMACZNEGO!*
+
+::: {.callout-tip appearance="minimal"}
+**DRINKING GAME!**
+
+Make this baking experience fun for yourself and drink every time you read 'mix' in the recipe!
+:::
