fixing typos, again

--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -8,7 +8,7 @@ If you want to be a real french person - yes, yes you want it - then you must kn
 ![](images/gratin-dauphinois.jpeg)
 
 ::: {.callout-note appearance="simple"}
-Let's tackle a hot topic on the french soil right off the bat: a true gratin dauphinois does **not** contain cheese. Nope, not even a little sprinkle on top. And yes, I know what you're thinking*----but it's called a gratin!* ok, I hear you. But if you're already reaching for the cheese, somewhere in France, a purist is dramatically clutching their pearls (or their potato peeler). Now, if annoying a French traditionalist feels like a win in your book, well who am I to stop you... two birds, one stone, I guess? That being said, I'm not one of them. So, if cheese makes your heart happy, by all means, go for it. If it's the idea of breaking unspoken culinary rules that gives you joy, okay, that's a little mischievous, but I'll allow it.
+Let's tackle a hot topic on the french soil right off the bat: a true gratin dauphinois does **not** contain cheese. Nope, not even a little sprinkle on top. And yes, I know what you're thinking*---but it's called a gratin!* ok, I hear you. But if you're already reaching for the cheese, somewhere in France, a purist is dramatically clutching their pearls (or their potato peeler). Now, if annoying a French traditionalist feels like a win in your book, well who am I to stop you... two birds, one stone, I guess? That being said, I'm not one of them. So, if cheese makes your heart happy, by all means, go for it. If it's the idea of breaking unspoken culinary rules that gives you joy, okay, that's a little mischievous, but I'll allow it.
 
 Personally, I'd recommend giving the classic version a shot first. You might be surprised---it's rich, creamy, and enough to stand tall without the cheese. And trust me, as someone who loves to sneak cheese into just about anything, that's saying a lot.
 :::
@@ -20,17 +20,17 @@ Back to our main subject; How do you make it?
 ::: {.callout-note appearance="minimal"}
 The fun part in this recipe? It's totally up to you. Take as many potatoes as you're in the mood for, poor in enough liquid cream and milk (a 60-40 ratio should do the trick) to cover them up and *voilà*--deliciousness awaits. Cooking rules, am I right?
 
-Don't worry, though, I'm not going to pull a classic 'grandma move' and tell you to 'just feel it' when you ask how much of something to use. I'll give you some guidelines to get you started, but the real magic happens when you start trusting your instincts (and maybe even start eyeballing everything ---god, turns out those old floks are onto something).
+Don't worry, though, I'm not going to pull a classic 'grandma move' and tell you to 'just feel it' when you ask how much of something to use. I'll give you some guidelines to get you started, but the real magic happens when you start trusting your instincts (and maybe even start eyeballing everything ---god, turns out those old folks are onto something).
 :::
 
--   1Kg of potatoes
+-   1kg of potatoes
 -   50cl of liquid cream, with a good fat percentage, like 30%
 -   500cl of milk (Usually that's the last thing you add to cover nicely everything up, so this is a veeery big approximation, I don't really know to be honest. Just have enough and do not start cooking this with only one sip left of your milk)
 -   Salt and pepper to your taste (Kristin, double your taste, I'm begging you)
 
 ### Materials
 
-You need a mandolin, not the instrument (unless you want some entertainment), but the cooking tool. Or it could be anything that helps you cut very thin slices of potatoes. Could be a knife, even, if you are patient enough (been there, done that, and I thought it would be my last day on earth).
+You need a mandoline, not the instrument (unless you want some entertainment), but the cooking tool. Or it could be anything that helps you cut very thin slices of potatoes. Could be a knife, even, if you are patient enough (been there, done that, and I thought it would be my last day on earth).
 
 Also, you need an oven.
 
@@ -38,12 +38,12 @@ Also, you need an oven.
 
 1.  You need to peel and then cut the potatoes into thin slices but not paper thin, like 1cm. You can rinse them and pat them dry to get rid of the starch if you want, but I never do it because I don't care enough.
 
-2.  Put the potatoes slice into the plate that will go inside the oven. Add some salt and pepper and mix everything with your hands.
+2.  Put the potato slices into a baking dish, the one that will go inside the oven. Add some salt, pepper, and mix everything with your hands.
 
 3.  Add the liquid cream on top of it evenly and then add the milk. At the end of this step, the potatoes should be fully covered but not completely drowning, you should still kinda see them (sorry, worse explanation ever, but you get me... right?).
 
 4.  This is the cursed step, cheese or no cheese? Choose wisely.
 
-5.  Put the plate into the oven for 1h minimum at 200°C on convection, if your oven has this feature. Check on the gratin after 45min, just to see how he is doing, and adjust the time accordingly (taking it out immediately or leaving it longer, I think 1h is good but I don't want to be responsible of a disaster).
+5.  Put the baking dish into the oven for 1h minimum at 200°C on convection, if your oven has this feature. Check on the gratin after 45min, just to see how he is doing, and adjust the time accordingly (taking it out immediately or leaving it longer, I think 1h is good but I don't want to be responsible of a disaster).
 
 6.  Take it out, and eat it!
