Modify ingredients (pistachio -> almond) and add the instructions

--- a/recipes/PistachioOat.qmd
+++ b/recipes/PistachioOat.qmd
@@ -3,9 +3,9 @@ title: Delicious Pistachio Oats
 author: Pauline
 ---
 
-Ingredients:
+**Ingredients**:
 
--   Pistachios, dry roasted 6 pcs
+-   Almond powder 5g
 
 -   Dark chocolat (80%) 10g
 
@@ -17,4 +17,12 @@ Ingredients:
 
 -   Greek Yogurt 130g
 
-Instructions: coming soon
+**Instructions**:
+
+Side note: this recipe need to sit for 2 hours in the fridge
+
+1.  Mix the oats with some boiled water and add the chocolat =\> cover for the oats to swell
+2.  Mix the pistachio butter, the greek yogurt, the oat milk and the almond powder
+3.  Mix everything together
+4.  Let it rest in the fridge
+5.  Enjoy !
