--- a/recipes/good-day.qmd
+++ b/recipes/good-day.qmd
@@ -5,8 +5,16 @@
 
 ![](images/good_day.jpeg){width="200"}
 
-Short intro
+Some days are easy to start, it may be almost guaranteed they gonna be good ones because you have something good, exciting planned. Other days may be hard to start because you have something stressful ahead (*C'est la vie*). However, most days are just neutral (neither good or bad) and with these tiny tricks you can easily convert them into a happy day.
 
-Detailed recipe
+The first thing at the morning, before you put any limb out of the bad, **SMILE**. Simply, just make a smiling face. There is scientific evidence that a mere smile may trigger release of neuropeptides that are responsible for good mood (prolactin, vasopressin, and oxytocin, ....*space holder for the paper....*).
 
-Have a good day!
+When getting out of bed (the leg you use first does not matter, it is a myth that you should be careful with which you get up!), gently strech your all joints. It does not have to be (and should not ) an extensive excercise, just a minute of streching is more than enough.
+
+Take a good breakfast and celebrate this moment. Don't not eat for calories, eat for the pleasure of eating. For that you may want to think of the breakfast a day before, to have something delicious (see other recipes for inspiration ....space holder for the link to other grids...).
+
+Whatever you plan to do during the day, prepare yourself for it and go out. If you are staying at home (I am jelous), before starting anything, open the window. The idea is that you spent outside a minute listening sounds, smelling scents and looking at a sky (does not have to be blue) or trees (if you have them around).
+
+After that you are ready for the challenges of the day.
+
+Make a habit of all this and have a good days!
