--- a/recipes/good-day.qmd
+++ b/recipes/good-day.qmd
@@ -5,7 +5,9 @@
 
 ![](images/good_day.jpeg){width="200"}
 
-Some days are easy to start, it may be almost guaranteed they gonna be good ones because you have something good, exciting planned. Other days may be harder to start because you have something stressful ahead (*C'est la vie*). However, most days are just neutral (neither good or bad at the beginning) and with these tiny tricks below you can easily convert these days into happy ones.
+::: callout-note
+Some days are easy to start, it may be almost guaranteed they gonna be good ones because you have something good, exciting planned. Other days may be harder to start because you have something stressful ahead (C'est la vie). However, most days are just neutral (neither good or bad at the beginning) and with these tiny tricks below you can easily convert these days into happy ones.
+:::
 
 The first thing at the morning, before you put any limb out of the bad, **smile**. Simply, just make a smiling face. There is scientific evidence that a mere smile may trigger release of neuropeptides that are responsible for good mood (prolactin, vasopressin, and oxytocin, ....*space holder for the paper....*).
 
