trying to complete the preparation section

--- a/recipes/Hefezopf.qmd
+++ b/recipes/Hefezopf.qmd
@@ -29,11 +29,15 @@ To finish:
 -   1 egg yolk
 -   20ml milk
 
-### Instructions
+### Preparation:
 
-Step-by-step guide
+Place the flour in a large bowl. Make a deep well in the middle with a spoon. Crumble the yeast into 50 ml of the lukewarm milk, add 1 teaspoon of the sugar, stir and dissolve. Pour the yeast milk into the well. Stir in a tablespoon of flour from the edge and leave the pre-dough covered in a warm place for 10 minutes.
 
-Step 1: 
+Add the remaining milk, sugar, egg yolk, soft butter, salt and vanilla sugar to the bowl. Mix all the ingredients together and knead (for approx. 10 minutes) until the dough is smooth and comes away from the sides of the bowl.
+
+Cover the yeast dough with a cloth and leave to rise in a warm place for approx. 1 hour.
+
+
 
 
 
