--- a/recipes/PistachioOat.qmd
+++ b/recipes/PistachioOat.qmd
@@ -3,9 +3,11 @@ title: Delicious Pistachio Oats
 author: Pauline
 ---
 
+![](images/Screenshot 2024-11-28 at 17.26.15.png){width="500"}
+
 **Ingredients**:
 
--   Almond powder 5g
+-   Almond powder 5g or Pistachio (as you wish)
 
 -   Dark chocolat (80%) 10g
 
@@ -21,8 +23,8 @@ author: Pauline
 
 Side note: this recipe need to sit for 2 hours in the fridge
 
-1.  Mix the oats with some boiled water and add the chocolat =\> cover for the oats to swell
+1.  Pour the oats and cover it fully with boiled water + add the chocolate =\> cover the ball and let it rest for about 5 mins
 2.  Mix the pistachio butter, the greek yogurt, the oat milk and the almond powder
-3.  Mix everything together
-4.  Let it rest in the fridge
+3.  Mix everything together (combine what was done at stage 1 and 2)
+4.  Let it rest in the fridge overnight
 5.  Enjoy !
