Test add picture

--- a/recipes/PistachioOat.qmd
+++ b/recipes/PistachioOat.qmd
@@ -3,13 +3,13 @@ title: Delicious Pistachio Oats
 author: Pauline
 ---
 
-![](images/Screenshot 2024-11-28 at 17.26.15.png){width="500"}
+![](images/PistachioOat.png)
 
 **Ingredients**:
 
 -   Almond powder 5g or Pistachio (as you wish)
 
--   Dark chocolat (80%) 10g
+-   Dark chocolate (80%) 10g
 
 -   Pistachio butter (100%) 20g
 
