--- a/recipes/good-day.qmd
+++ b/recipes/good-day.qmd
@@ -13,15 +13,15 @@ Some days are easy to start, it may be almost guaranteed they gonna be good ones
 
 ### Ingredients
 
-Actually, you need nothing. It's one of these rare occasions when you have get something of nothing.
+A good breakfast. You may want to think of the breakfast a day before, to have something delicious on your plate (see other recipes for inspiration ....*space holder for the link to other grids...*).
 
-### Four steps procedure 
+### Four steps procedure
 
 The first thing at the morning, before you put any limb out of the bad, **smile**. Simply, just make a smiling face. There is scientific evidence that a mere smile may trigger release of neuropeptides that are responsible for good mood (prolactin, vasopressin, and oxytocin, ....*space holder for the paper....*).
 
 When getting out of bed (the leg you use first does not matter, you do not need to be careful with which leg you get up first, it is a myth!), gently **stretch your all joints**. It does not have to be (and should not ) an extensive exercise, just a minute of stretching is more than enough.
 
-**Take a good breakfast and celebrate the moment**. Don't not eat just for calories, eat for the pleasure of eating. For that you may want to think of the breakfast a day before, to have something delicious on your plate (see other recipes for inspiration ....*space holder for the link to other grids...*).
+**Take a good breakfast and celebrate the moment**. Don't not eat just for calories, eat for the pleasure of eating.
 
 Whatever you plan to do during the day, prepare yourself for it and go outside. If you are staying at home (I am jealous), before starting anything, open the window. The idea is that you **spent outside a minute** **just listening sounds, smelling scents and looking at the sky** (does not have to be blue) **or trees** (if you have them around).
 
