--- a/recipes/good-day.qmd
+++ b/recipes/good-day.qmd
@@ -13,7 +13,7 @@ Some days are easy to start, it may be almost guaranteed they gonna be good ones
 
 ### Ingredients
 
-A good breakfast, of which you may want to think a day before. To have something delicious on your plate you may look for inspration to other recepies (particularly *bread* and *Hepezopf* seems to be particularly adequates). Besides that, you do not need anything else, it's one of these rare occasions when you may get something out of (almost) nothing.
+A good breakfast, of which you may want to think a day before. To have something delicious on your plate you may look for inspration to other recepies (particularly *bread* \[<https://n2g-recipes-2024.claude-apps.com/recipes/Homemade-bread.html>\] and *Hepezopf* \[<https://n2g-recipes-2024.claude-apps.com/recipes/Hefezopf.html>\] seems to be particularly adequates). Besides that, you do not need anything else, it's one of these rare occasions when you may get something out of (almost) nothing.
 
 ### Four steps procedure
 
