fix #14 and a little starch comment addition

--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -36,7 +36,7 @@ Also, you need an oven.
 
 ### Instruction
 
-1.  You need to peel and then cut the potatoes into thin slices but not paper thin, like 2-3mm. You can rinse them and pat them dry to get rid of the starch if you want, but I never do it because I don't care enough.
+1.  You need to peel and then cut the potatoes into thin slices but not paper thin, like 2-3mm. You can rinse them and pat them dry to get rid of the starch if you really want to, but I never do it because I don't care enough and I think it might be wanted.
 
 2.  Put the potato slices into a baking dish, the one that will go inside the oven. Add some salt, pepper, and mix everything with your hands.
 
