--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -36,7 +36,7 @@ Also, you need an oven.
 
 ### Instruction
 
-1.  You need to peel and rinse with water the potatoes. Then cut them into thin slices but not paper thin, like 2-3mm.
+1.  You need to peel and rinse with water the potatoes. Then, cut them into thin slices but not paper thin, like 2-3mm.
 
 2.  Put the potato slices into a baking dish, the one that will go inside the oven. Add some salt, pepper, and mix everything with your hands.
 
