fix #15 : trying to close this issue with the command line (and correct some typos)

--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -22,7 +22,7 @@ When baking, I'm more of a 'na oko' person. But for those who need the utmost pr
 
 -   my cup is 250 ml
 
--   my tea spoon is 5 ml
+-   my teaspoon is 5 ml
 :::
 
 **Dough:**
@@ -35,13 +35,13 @@ When baking, I'm more of a 'na oko' person. But for those who need the utmost pr
 
 -   flour - 255 g
 
--   baking powder - 1.5 tea spoon
+-   baking powder - 1.5 teaspoon
 
--   baking soda - 0.5 tea spoon
+-   baking soda - 0.5 teaspoon
 
 -   brow sugar - 1.5 cup
 
--   cinnamon - 1 tea spoon
+-   cinnamon - 1 teaspoon
 
 -   pecan nuts - 200 grams
 
@@ -51,11 +51,11 @@ When baking, I'm more of a 'na oko' person. But for those who need the utmost pr
 
 -   cream cheese (the fluffy type like Almette )
 
--   powdered sugar - the original recipe said 120 grams, but it's way to much, I add 20 grams
+-   powdered sugar - the original recipe said 120 grams, but it's way too much, I add 20 grams
 
 -   butter - 50 g
 
--   orange juice - squeezed from a 0.25 of orange - or more, if you want it to be less solid/ more orangy
+-   orange juice - squeezed from a 0.25 of orange - or more, if you want it to be less solid/ more orangey
 
 ### Step by step
 
