--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -1,14 +1,14 @@
 ---
-  title: Carrot Cake
+  title: Carrot Cake 
   author: Marta
 ---
 
-![Wild carrot from a botany textbook according to ChatGPT](images/carrot.webp){fig-align="center" width="500"}
+![Wild carrot from a botany textbook according to ChatGPT ????](images/carrot.webp){fig-align="center" width="500"}
 
 ### Ingredients
 
 ::: {.callout-important appearance="minimal"}
-The part of the carrot that we will be using here (the red-orange part) is a root of Wild carrot *Daucus carota*. However, whether something is a root or not is famously causing confusion among non-biologist type of folks. For example, if you type 'root' on your phone, Gboard will propose an emoji of ginger root. And that is not a root, not at all. It's a rhizome, which is actually a stem!
+The part of the carrot that we will be using here (the red-orange part) is a root of Wild carrot *Daucus carota*. However, whether something is a root or not is famously causing confusion among non-biologist type of folks. For example, if you type 'root' on your phone, Gboard will propose an emoji of ginger root ???? And that is not a root, not at all. It's a rhizome, which is actually a stem!
 
 Know your roots, people!
 :::
@@ -27,7 +27,7 @@ When baking, I'm more of a 'na oko' person. But for those who need the utmost pr
 
 **Dough:**
 
--   carrots (medium size) - 2
+-   carrots (medium size) - 2 ????
 
 -   oil - 1 cup
 
