--- a/recipes/good-day.qmd
+++ b/recipes/good-day.qmd
@@ -20,7 +20,7 @@ A good breakfast, of which you may want to think a day before. To have something
 
 The first thing at the morning, before you put any limb out of the bad, **smile**. Simply, just make a smiling face. There is scientific evidence that a mere smile may trigger release of neuropeptides that are responsible for good mood (prolactin, vasopressin, and oxytocin, e.g. [@Martin2018]).
 
-When getting out of bed (the legK you use first does not matter, you do not need to be careful with which leg you get up first, it is a myth!), gently **stretch your all joints**. It does not have to be (and should not ) an extensive exercise, just a minute of stretching is more than enough.
+When getting out of bed (the leg you use first does not matter, you do not need to be careful with which leg you get up first, it is a myth!), gently **stretch your all joints**. It does not have to be (and should not) an extensive exercise, just a minute of stretching is more than enough.
 
 **Take a good breakfast and celebrate the moment**. Don't not eat just for calories, eat for the pleasure of eating.
 
