add Dutch expression

--- a/recipes/good-day.qmd
+++ b/recipes/good-day.qmd
@@ -12,7 +12,7 @@
 Some days are easy to start, it may be almost guaranteed they gonna be good ones because you have something good, exciting planned. Other days may be harder to start because you have something stressful ahead (C'est la vie [^1]). However, most days are just neutral (neither good or bad at the beginning) and with these tiny tricks below you can easily convert these days into happy ones.
 :::
 
-[^1]: French expression, that could be translated as "That's the life" (in Spanish: "Asi es la vida", in Polish: "Takie życie..." - suspention points are quite important here, in Russian: "такая жизнь"; in Dutch: XXX, in German: XXX).
+[^1]: French expression, that could be translated as "That's the life" (in Spanish: "Asi es la vida", in Polish: "Takie życie..." - suspention points are quite important here, in Russian: "такая жизнь"; in Dutch: "Zo is het leven nou eenmaal", in German: XXX).
 
 ### Ingredients
 
