--- a/recipes/PistachioOat.qmd
+++ b/recipes/PistachioOat.qmd
@@ -21,10 +21,10 @@ author: Pauline
 
 **Instructions**:
 
-Side note: this recipe need to sit for 2 hours in the fridge
+Side note: this recipe need to sit for 2 hours in the fridge + you need to like seeds otherwise it might be problematic
 
 1.  Pour the oats and cover it fully with boiled water + add the chocolate =\> cover the ball and let it rest for about 5 mins
-2.  Mix the pistachio butter, the greek yogurt, the oat milk and the almond powder
+2.  Mix the pistachio butter, the Greek yogurt, the oat milk and the almond powder
 3.  Mix everything together (combine what was done at stage 1 and 2)
 4.  Let it rest in the fridge overnight
 5.  Enjoy !
