--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -1,6 +1,7 @@
 ---
   title: Carrot Cake 
   author: Marta
+  from: markdown+emoji
 ---
 
 ![Wild carrot from a botany textbook according to ChatGPT *\<here I wanted to have an emoji of a [brain](https://emojipedia.org/brain)\>*](images/carrot.webp){fig-align="center" width="500"}
@@ -27,8 +28,7 @@ When baking, I'm more of a 'na oko' person. But for those who need the utmost pr
 
 **Dough:**
 
--   carrots (medium size) - 2 \<*and here I wanted to add [carrot](https://emojipedia.org/carrot)*\>
-
+-   carrots (medium size) - 2 :carrot:
 -   oil - 1 cup
 
 -   eggs - 3
