--- a/recipes/Hefezopf.qmd
+++ b/recipes/Hefezopf.qmd
@@ -6,7 +6,7 @@ author: "Kristin"
 With this recipe you can make a fabulous German Hefezopf. Be aware that the making of this delicious bread takes around three hours.
 
 ::: {.callout-note appearance="simple"}
-In Europe itself there are different characteristics which can be found in the Hefezopf. In Bavaria for instance, particularly in the Upper Palatinate region, as per a local custom of Spitzlschenkens where by a Godfather, during the baptism gives an Allerheiligenspitzi, a large plait to his Godson. In Rhineland pretzel shaped bread plaits are served which carry fillings of almonds and granulated sugar. Saxony has its own tradition where there is a dish that goes by the name of Brötchentei. It also involves both sweet yeast plaits and regular yeast plaits along with poppy fillings. In the upper Franconia region you can find Hefezopf usually in the form of a round egg shaped ring. It is a speciality during Easter in the region. (lots of information can be found [here](https://ilikegermany.com/german-food/hefezopf/))
+In Europe itself there are different characteristics which can be found in the Hefezopf. In Bavaria for instance, particularly in the Upper Palatinate region, as per a local custom of Spitzlschenkens where by a Godfather, during the baptism gives an Allerheiligenspitzi, a large plait to his Godson. In Rhineland pretzel shaped bread plaits are served which carry fillings of almonds and granulated sugar. Saxony has its own tradition where there is a dish that goes by the name of Brötchentei. It also involves both sweet yeast plaits and regular yeast plaits along with poppy fillings. In the upper Franconia region you can find Hefezopf usually in the form of a round egg shaped ring. It is a speciality during Easter in the region. (lots of information can be found [here](https://ilikegermany.com/german-food/hefezopf) and you can even find another recipe there - feel free to compare them and try both)
 :::
 
 # Hefezopf: The German Braided Bread
@@ -37,8 +37,13 @@ Add the remaining milk, sugar, egg yolk, soft butter, salt and vanilla sugar to 
 
 Cover the yeast dough with a cloth and leave to rise in a warm place for approx. 1 hour.
 
+When the dough has approximately doubled in volume, place it on a lightly floured work surface.
 
+Knead again briefly with your hands. Divide the dough into three equal pieces and shape them into strands. Braid the strands into a plait. Place the plaits on a baking tray lined with baking paper, cover with a cloth and leave to rise for another 30 minutes. Preheat the oven to 175 degrees top and bottom heat. 
 
+Whisk the egg yolk with the milk and brush the plaits with it.
+
+Bake for around 35 minutes until golden brown.
 
 
 
