--- a/recipes/corn-squared-beef.qmd
+++ b/recipes/corn-squared-beef.qmd
@@ -9,7 +9,11 @@ Ingredients:
 
 -   Corned beef (must be from a can for full effect)
 
--   Corn (must be from a can for full effect
+    ::: callout-note
+    **Corned beef**, **bully beef**, or **salt beef** in some [Commonwealth](https://en.wikipedia.org/wiki/Commonwealth_of_Nations "Commonwealth of Nations") countries, is [salt-cured](https://en.wikipedia.org/wiki/Salt-cured_meat "Salt-cured meat") [brisket](https://en.wikipedia.org/wiki/Brisket "Brisket") of beef.^[\[1\]](https://en.wikipedia.org/wiki/Corned_beef#cite_note-1)^ The term comes from the treatment of the meat with large-grained [rock salt](https://en.wikipedia.org/wiki/Rock_salt "Rock salt"), also called "corns" of [salt](https://en.wikipedia.org/wiki/Salt#Edible_salt "Salt"). Sometimes, [sugar](https://en.wikipedia.org/wiki/Sugar "Sugar") and [spices](https://en.wikipedia.org/wiki/Spice "Spice") are added to corned beef recipes. Corned beef is featured as an ingredient in many cuisines.
+    :::
+
+-   Corn (must be from a can for full effect)
 
     ::: callout-note
     The optimum ratio is up to you but I prefer 1 can beef to 2 cans corn
