trying to add carrot

--- a/recipes/carrot-cake.qmd
+++ b/recipes/carrot-cake.qmd
@@ -27,7 +27,7 @@ When baking, I'm more of a 'na oko' person. But for those who need the utmost pr
 
 **Dough:**
 
--   carrots (medium size) - 2 \<*and here I wanted to add [carrot](https://emojipedia.org/carrot)*\>
+-   carrots (medium size) - 2 ????
 
 -   oil - 1 cup
 
