--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -7,6 +7,8 @@ If you want to be a real french person - yes, yes you want it - then you must kn
 
 ![](images/dauphinois.jpeg){fig-align="center"}
 
+When I was little, I was only eating this during big family dinner, usually at Christmas. As it is one of my all time favourite since day one, I was dying all year long to finally eat it (the best one, from my grandma –sorry mom), and I think my first heartbreak was that one time, in 2008, when for whatever reason my grandma didn't make it. She decided that she will only make a cardoon gratin, the worse gratin ever, and I'm still so upset about it. Like, for real, what the hell? What a way to ruin Christmas.
+
 ::: {.callout-note appearance="simple"}
 Let's tackle a hot topic on the french soil right off the bat: a true gratin dauphinois does **not** contain cheese. Nope, not even a little sprinkle on top. And yes, I know what you're thinking*---but it's called a gratin!* ok, I hear you. But if you're already reaching for the cheese, somewhere in France, a purist is dramatically clutching their pearls (or their potato peeler). Now, if annoying a French traditionalist feels like a win in your book, well who am I to stop you... two birds, one stone, I guess? That being said, I'm not one of them. So, if cheese makes your heart happy, by all means, go for it. If it's the idea of breaking unspoken culinary rules that gives you joy, okay, that's a little mischievous, but I'll allow it.
 
