--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -28,7 +28,7 @@ Don't worry, though, I'm not going to pull a classic 'grandma move' and tell you
 -   1kg of potatoes
 -   50cl of liquid cream, with a good fat percentage, like 30%
 -   500cl of milk (Usually that's the last thing you add to cover nicely everything up, so this is a veeery big approximation, I don't really know to be honest. Just have enough and do not start cooking this with only one sip left of your milk)
--   Salt and pepper to your taste (Kristin, double your taste, I'm begging you)
+-   Salt, pepper, garlic and nutmag to your taste (Kristin, double your taste, I'm begging you)
 
 ### Materials
 
