--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -25,10 +25,10 @@ The fun part in this recipe? It's totally up to you. Take as many potatoes as yo
 Don't worry, though, I'm not going to pull a classic 'grandma move' and tell you to 'just feel it' when you ask how much of something to use. I'll give you some guidelines to get you started, but the real magic happens when you start trusting your instincts (and maybe even start eyeballing everything ---god, turns out those old folks are onto something).
 :::
 
--   1kg of potatoes
--   50cl of liquid cream, with a good fat percentage, like 30%
--   500cl of milk (Usually that's the last thing you add to cover nicely everything up, so this is a veeery big approximation, I don't really know to be honest. Just have enough and do not start cooking this with only one sip left of your milk)
--   Salt, pepper, garlic and nutmag to your taste (Kristin, double your taste, I'm begging you)
+-   🥔 1kg of potatoes
+-   🐮 50cl of liquid cream, with a good fat percentage, like 30%
+-   🥛 500cl of milk (Usually that's the last thing you add to cover nicely everything up, so this is a veeery big approximation, I don't really know to be honest. Just have enough and do not start cooking this with only one sip left of your milk)
+-   🧂 Salt, pepper, garlic and nutmag to your taste (Kristin, double your taste, I'm begging you)
 
 ### Materials
 
