--- a/recipes/dauphinois.qmd
+++ b/recipes/dauphinois.qmd
@@ -7,7 +7,7 @@ If you want to be a real french person - yes, yes you want it - then you must kn
 
 ![](images/dauphinois.jpeg){fig-align="center"}
 
-When I was little, this dish was reserved for big family dinners, usually Christmas. And since it's been one of my all-time favourites since day one, you can imagine how I psent the entire year *dying* to finally eat it (the best version, from my grandma –sorry mom). My first heartbreak? It was Christmas 2008, when, for whatever reasons, my grandma decided *not* to make it. Instead, she only went with cardoon gratin, the worse gratin ever, and I'm still so upset about it. Like, seriously, what the hell? Way to ruin Christmas, Grandma.
+When I was little, this dish was reserved for big family dinners, usually Christmas. And since it's been one of my all-time favourites since day one, you can imagine how I spent the entire year *dying* to finally eat it (the best version, from my grandma –sorry mom). My first heartbreak? It was Christmas 2008, when, for whatever reasons, my grandma decided *not* to make it. Instead, she only went with cardoon gratin, the worse gratin ever, and I'm still so upset about it. Like, seriously, what the hell? Way to ruin Christmas, Grandma.
 
 ::: {.callout-note appearance="simple"}
 Let's tackle a hot topic on the french soil right off the bat: a true gratin dauphinois does **not** contain cheese. Nope, not even a little sprinkle on top. And yes, I know what you're thinking*---but it's called a gratin!* ok, I hear you. But if you're already reaching for the cheese, somewhere in France, a purist is dramatically clutching their pearls (or their potato peeler). Now, if annoying a French traditionalist feels like a win in your book, well who am I to stop you... two birds, one stone, I guess? That being said, I'm not one of them. So, if cheese makes your heart happy, by all means, go for it. If it's the idea of breaking unspoken culinary rules that gives you joy, okay, that's a little mischievous, but I'll allow it.
